package gameZeldiablo.Zeldiablo.Entities;

public enum Intelligence {
    /**
     * Défini l'intelligence d'un monstre.
     */
    NULLE, // indice 0
    FAIBLE, // indice 1
    MOYENNE, // indice 2
    FORTE // indice 3
}
